<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/activator_result" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_warning_tip"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btn_qr_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_listen_tone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>